--- a/public/style.css
+++ b/public/style.css
@@ -2,15 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 @font-face {
     font-family: 'Google Sans';
-    src: url('/ProductSans-Regular.tff');
+    src: url('/ProductSans-Regular.ttf');
 }
 @font-face {
     font-family: 'Google Sans Thin';
-    src: url('/ProductSans-Regular.tff');
-}
-
-#baldiv {
-  z-index: 999999999999;
+    src: url('/ProductSans-Regular.ttf');
 }
 
 body, html {
@@ -19,11 +15,105 @@ body, html {
   font-family: 'Google Sans', sans-serif;
   letter-spacing: 2px;
   user-select: none;
-  background-color: #bfbfbf;
+  background-color: #717aaf;
   -webkit-transition: background-color 1000ms linear;
   -ms-transition: background-color 1000ms linear;
   transition: background-color 1000ms linear;
   overflow: hidden;
+}
+.shopbutton {
+  background: #5568a7;
+  display: inline-block;
+  -webkit-transition: background-color 1000ms linear;
+  -ms-transition: background-color 1000ms linear;
+  transition: background-color 1000ms linear;
+  margin-left: 5px;
+  color: #ffffff;
+  margin-right: 5px;
+  border: 3px inset #bbbbbb;
+  width: calc(25% - 50px);
+  height: 250px;
+  margin-top: 5px;
+  font-size: 20px;
+}
+#exit-shop {
+  float: right;
+  margin-right: 15px;
+  display: none;
+ -webkit-filter: brightness(0) invert(1);
+ filter: brightness(0) invert(1); 
+}
+.shopbutton:hover {
+  background: #5997e9;
+}
+
+.after-end {
+  display: none;
+  z-index: 99999;
+  overflow: auto;
+  position: absolute;
+  top: 0;
+  height: 100vh;
+  width: 100%;
+}
+
+.ending-placement {
+  color: black;
+  font-size: 75px;
+}
+
+#enddiv {
+  text-align: center;
+  margin-top: 100px;
+  border-radius: 6px;
+  background: #ffffff;
+  height: 100px;
+  margin: auto;
+  width: 40%;
+  -webkit-transition: background-color 250ms linear;
+  -ms-transition: background-color 250ms linear;
+  transition: background-color 250ms linear;
+  border: 2px solid #eeeeee;
+}
+
+.sa {
+  margin-top: 10px;
+  color: black;
+}
+
+.clap {
+  text-align: center;
+  font-weight: bold;
+  border-radius: 6px;
+  background: #ffffff;
+  height: 100px;
+  font-size: 30px;
+  margin: auto;
+  width: 40%;
+  -webkit-transition: background-color 250ms linear;
+  -ms-transition: background-color 250ms linear;
+  transition: background-color 250ms linear;
+  border: 2px solid #eeeeee;
+  margin-top: 20px;
+}
+
+.clap:hover {
+  cursor: pointer;
+  background: #f7ff8b
+}
+
+.navbar {
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  padding-top: 15px;
+  background: #505da7;
+}
+
+.end-screen {
+  display: none;
 }
 
 #gimkit-font-join-small {
@@ -68,22 +158,98 @@ body, html {
   height: 50px;
   border: 2px solid #eeeeee;
   padding-left: 5px;
+  text-align: center;
+  font-size: 20px;
+  font-family: "Roboto Condensed", sans-serif;
+  letter-spacing: 1px;
+}
+
+#id:focus {
+  text-align: center;
+  font-family: "Roboto Condensed", sans-serif;
+  letter-spacing: 1px;
 }
 
 #id::placeholder {
-  font-size: 15px;
+  text-align: center;
+  font-size: 20px;
+  font-family: "Roboto Condensed", sans-serif;
+  letter-spacing: 1px;
 }
 
-#name {
+#song {
+  border-radius: 6px;
+  width: 200px;
+  height: 56px;
+  border: 2px solid #eeeeee;
+  padding-left: 5px;
+  text-align: center;
+  font-size: 20px;
+  font-family: "Roboto Condensed", sans-serif;
+  letter-spacing: 1px;
+}
+
+#song:focus {
+  text-align: center;
+  font-family: "Roboto Condensed", sans-serif;
+  letter-spacing: 1px;
+}
+
+#song::placeholder {
+  text-align: center;
+  font-size: 20px;
+  font-family: "Roboto Condensed", sans-serif;
+  letter-spacing: 1px;
+}
+
+#time {
   border-radius: 6px;
   width: 200px;
   height: 50px;
   border: 2px solid #eeeeee;
   padding-left: 5px;
+  text-align: center;
+  font-size: 20px;
+  font-family: "Roboto Condensed", sans-serif;
+  letter-spacing: 1px;
+}
+
+#time:focus {
+  text-align: center;
+  font-family: "Roboto Condensed", sans-serif;
+  letter-spacing: 1px;
+}
+
+#time::placeholder {
+  text-align: center;
+  font-size: 20px;
+  font-family: "Roboto Condensed", sans-serif;
+  letter-spacing: 1px;
+}
+
+#name {
+  text-align: center;
+  border-radius: 6px;
+  width: 200px;
+  height: 50px;
+  border: 2px solid #eeeeee;
+  padding-left: 5px;
+  font-size: 20px;
+  font-family: "Roboto Condensed", sans-serif;
+  letter-spacing: 1px;
+}
+
+#name:focus {
+  text-align: center;
+  font-family: "Roboto Condensed", sans-serif;
+  letter-spacing: 1px;
 }
 
 #name::placeholder {
-  font-size: 15px;
+  text-align: center;
+  font-size: 20px;
+  font-family: "Roboto Condensed", sans-serif;
+  letter-spacing: 1px;
 }
 
 input[type=submit] {
@@ -92,9 +258,39 @@ input[type=submit] {
   width: 70px;
   height: 56px;
   border: 2px solid #eeeeee;
+  vertical-align: top;
+  font-size: 16px;
 }
 
 input[type=submit]:hover {
+  border-radius: 6px;
+  cursor: pointer;
+  border: 2px solid #eeeeee;
+}
+
+#join {
+  border-radius: 6px;
+  background: #ffffff;
+  width: 120px;
+  height: 56px;
+  border: 2px solid #eeeeee;
+}
+
+#join:hover {
+  border-radius: 6px;
+  cursor: pointer;
+  border: 2px solid #eeeeee;
+}
+
+#host {
+  border-radius: 6px;
+  background: #ffffff;
+  width: 120px;
+  height: 56px;
+  border: 2px solid #eeeeee;
+}
+
+#host:hover {
   border-radius: 6px;
   cursor: pointer;
   border: 2px solid #eeeeee;
@@ -105,7 +301,7 @@ h1 {
 }
 
 #starting-soon {
-  margin-top: -50px;
+  margin-top: -100px;
 }
 
 svg {
@@ -140,27 +336,180 @@ svg {
   font-size: 20px;
 }
 
-.correct {
-  background-color: #38c258;
-  width: 100%;
-  height: 100vh;
-  text-align: center;
-}
-
-.sbutton {
+.cobutton {
   display: inline-block;
   margin-left: 5px;
   color: #ffffff;
   margin-right: 5px;
   border: 3px inset #bbbbbb;
   background: #aaaaaa;
-  width: calc(40% - 50px);
+  width: calc(84% - 50px);
   height: 250px;
   margin-top: 5px;
   font-size: 20px;
 }
+
+.shobutton {
+  display: inline-block;
+  margin-left: 5px;
+  color: #ffffff;
+  margin-right: 5px;
+  border: 3px inset #bbbbbb;
+  background: #aaaaaa;
+  width: calc(84% - 50px);
+  height: 250px;
+  margin-top: 5px;
+  font-size: 20px;
+}
+
+.shop {
+  padding-top: 50px;
+  text-align: center;
+  height: 100vh;
+  width: 100%;
+  display: none;
+  z-index: 999999;
+  position: sticky;
+  top: 50px;
+  background: lightcoral;
+}
+
+#perquestionshop {
+  padding-top: 50px;
+  text-align: center;
+  height: 100vh;
+  width: 100%;
+  display: none;
+  z-index: 999999;
+  position: sticky;
+  top: 50px;
+  background: lightcoral;
+}
+
+#streakbonusshop {
+  padding-top: 50px;
+  text-align: center;
+  height: 100vh;
+  width: 100%;
+  display: none;
+  z-index: 999999;
+  position: sticky;
+  top: 50px;
+  background: lightcoral;
+}
+
+#insuranceshop {
+  padding-top: 50px;
+  text-align: center;
+  height: 100vh;
+  width: 100%;
+  display: none;
+  z-index: 999999;
+  position: sticky;
+  top: 50px;
+  background: lightcoral;
+}
+
+#multipliershop {
+  padding-top: 50px;
+  text-align: center;
+  height: 100vh;
+  width: 100%;
+  display: none;
+  z-index: 999999;
+  position: sticky;
+  top: 50px;
+  background: lightcoral;
+}
+
+.shbutton {
+  display: inline-block;
+  margin-left: 5px;
+  color: #ffffff;
+  margin-right: 5px;
+  border: 3px inset #bbbbbb;
+  background: #aaaaaa;
+  width: 45%;
+  height: 250px;
+  margin-top: 5px;
+  font-size: 20px;
+}
+
+.correct {
+  background-color: #38c258;
+  width: 100%;
+  height: 100vh;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  padding-top: 20px;
+}
+
+.correct h1 {
+  font-size: 50px;
+}
+
+.incorrect {
+  background-color: #c23838;
+  width: 100%;
+  height: 100vh;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  padding-top: 20px;
+}
+
+.incorrect h1 {
+  font-size: 50px;
+}
+
+#before-start {
+  position: absolute;
+  top: 0;
+  z-index: 9999;
+}
+
+#boostshop {
+  padding-top: 50px;
+  text-align: center;
+  height: 100vh;
+  width: 100%;
+  display: none;
+  z-index: 999999;
+  position: sticky;
+  top: 50px;
+  background: lightcoral;
+}
+
+#money {
+  background: none;
+  display: inline-block;
+  margin-left: 10px;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-right: 0;
+}
+
+#shop-money {
+  background: none;
+  margin-left: 10px;
+}
+
+.sbutton {
+  display: inline-block;
+  margin-left: 5px;
+  border-radius: 6px;
+  color: #ffffff;
+  margin-right: 5px;
+  border: 3px inset #bbbbbb;
+  background: #aaaaaa;
+  width: calc(40% - 50px);
+  height: 225px;
+  margin-top: 5px;
+  font-size: 40px;
+}
 .button-frame-01 {
-  margin-top: 10%;
+  margin-top: 50px;
 }
 #q2 {
   display: none;
@@ -171,8 +520,8 @@ svg {
   border-color: crimson;
 }
 .b2 {
-  background: yellow;
-  border-color: yellow;
+  background: rgb(199, 199, 0);
+  border-color: rgb(199, 199, 0);
 }
 .b3 {
   background: lightgreen;
@@ -202,17 +551,25 @@ svg {
   color: white;
 }
 
+#title {
+  background: none;
+  position: absolute;
+  top: -10px;
+  color: white;
+  left: 10px;
+}
+
 /*Credits to https://tobiasahlin.com/spinkit/ for this animation*/
 
 .sk-folding-cube {
   width: 40px;
   height: 40px;
   top: 40%;
-  right: 48%;
+  left: 50%;
   margin: auto;
   position: absolute;
-  -webkit-transform: rotateZ(45deg);
-          transform: rotateZ(45deg);
+  -webkit-transform: rotateZ(45deg) translateX(-50%);
+          transform: rotateZ(45deg) translateX(-50%);
 }
 
 .sk-folding-cube .sk-cube {
