--- a/public/indexstyle.css
+++ b/public/indexstyle.css
@@ -19,6 +19,74 @@ html {
   margin-right:auto;
 }
 
+.place1 {
+  background: gold;
+  transition: fadein 3s linear;
+  border-radius: 6px;
+  width: 200px;
+  font-weight: 1000;
+  position: absolute;
+  top: 20%;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  height: 250px;
+  color: white;
+  visibility: hidden;
+  margin-top: 50px;
+}
+
+@keyframes fadein{
+    0%{opacity:0;visibility:visible;}
+    100%{opacity:1;}
+}
+
+.place2 {
+  background: silver;
+  position: absolute;
+  top: 30%;
+  left: 30%;
+  transition: fadein 3s linear;
+  border-radius: 6px;
+  visibility: hidden;
+  width: 200px;
+  font-weight: 1000;
+  display: inline-block;
+  margin-right: 150px;
+  height: 250px;
+  color: white;
+  margin-top: 50px;
+}
+
+.place3 {
+  background: #cd7f32;
+  position: absolute;
+  top: 30%;
+  right: 30%;
+  transition: fadein 3s linear;
+  visibility: hidden;
+  border-radius: 6px;
+  width: 200px;
+  font-weight: 1000;
+  margin-left: 150px;
+  display: inline-block;
+  height: 250px;
+  color: white;
+  margin-top: 50px;
+}
+
+.username {
+  font-size: 35px;
+  overflow-wrap: break-word;
+  display: block;
+}
+
+.pbalance {
+  font-size: 30px;
+  font-weight: 500;
+  display: block;
+}
+
 #gimkit-font-join-small {
   font-family: 'Google Sans Thin', sans-serif;
   font-weight: lighter;
@@ -183,7 +251,7 @@ li {
   background: #000000;
   height: auto;
   padding: 10px 5px;
-  width: 100px;
+  width: auto;
   margin-left: 5px;
   margin-right: 5px;
   color: white;
@@ -193,6 +261,9 @@ li {
 }
 #copy3, #copy2 {
   display: block;
+}
+#roomidcopy {
+  transform : scale(0,0);
 }
 h1 {
   display: inline-block;
