--- a/public/style.css
+++ b/public/style.css
@@ -204,6 +204,7 @@ body, html {
   height: 56px;
   border: 2px solid #eeeeee;
   padding-left: 5px;
+  background: white;
   text-align: center;
   font-size: 20px;
   font-family: "Roboto Condensed", sans-serif;
@@ -217,6 +218,32 @@ body, html {
 }
 
 #song::placeholder {
+  text-align: center;
+  font-size: 20px;
+  font-family: "Roboto Condensed", sans-serif;
+  letter-spacing: 1px;
+}
+
+#quiz {
+  border-radius: 6px;
+  width: 200px;
+  height: 56px;
+  border: 2px solid #eeeeee;
+  padding-left: 5px;
+  background: white;
+  text-align: center;
+  font-size: 20px;
+  font-family: "Roboto Condensed", sans-serif;
+  letter-spacing: 1px;
+}
+
+#quiz:focus {
+  text-align: center;
+  font-family: "Roboto Condensed", sans-serif;
+  letter-spacing: 1px;
+}
+
+#quiz::placeholder {
   text-align: center;
   font-size: 20px;
   font-family: "Roboto Condensed", sans-serif;
