--- a/public/indexstyle.css
+++ b/public/indexstyle.css
@@ -23,7 +23,7 @@ html {
   background: gold;
   transition: fadein 3s linear;
   border-radius: 6px;
-  width: 200px;
+  min-width: 200px;
   font-weight: 1000;
   position: absolute;
   top: 20%;
@@ -31,7 +31,9 @@ html {
   left: 0;
   right: 0;
   height: 250px;
+  max-width: 300px;
   color: white;
+  width: auto;
   visibility: hidden;
   margin-top: 50px;
 }
@@ -49,7 +51,9 @@ html {
   transition: fadein 3s linear;
   border-radius: 6px;
   visibility: hidden;
-  width: 200px;
+  width: auto;
+  min-width: 200px;
+  max-width: 300px;
   font-weight: 1000;
   display: inline-block;
   margin-right: 150px;
@@ -64,9 +68,11 @@ html {
   top: 30%;
   right: 30%;
   transition: fadein 3s linear;
+  max-width: 300px;
   visibility: hidden;
   border-radius: 6px;
-  width: 200px;
+  min-width: 200px;
+  width: auto;
   font-weight: 1000;
   margin-left: 150px;
   display: inline-block;
