--- a/public/indexstyle.css
+++ b/public/indexstyle.css
@@ -104,11 +104,23 @@ html {
   font-size: 40px;
 }
 
+#gimkit-font-join-space-small {
+  font-size: 1px;
+}
+
 #title {
   background: none;
   position: absolute;
   color: white;
   right: 10px;
+}
+
+#title2 {
+  background: none;
+  position: absolute;
+  color: white;
+  left: 10px;
+  top: 60px;
 }
 
 ol {
@@ -134,7 +146,7 @@ li {
   right: 0;
   border: 2px solid #ffffff;
   background: #384174;
-  top: 150px;
+  top: 138px;
 }
 
 #upgrades {
@@ -151,7 +163,7 @@ li {
   width: 20%;
   border: 2px solid #ffffff;
   background: #384174;
-  top: 150px;  
+  top: 138px;  
   font-size: 20px;
   color: white;
   padding-left: 10px;
@@ -196,10 +208,12 @@ li {
 }
 
 #total-money {
+  top: 53px;
   color: white;
-  margin-left: 10px;
-  margin-top: 21px;
-  margin-bottom: 100px;
+  position: absolute;
+  font-size: 40px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 #maintext {
