--- a/public/style.css
+++ b/public/style.css
@@ -21,6 +21,25 @@ body, html {
   transition: background-color 1000ms linear;
   overflow: hidden;
 }
+#leaderboard {
+  position: absolute;
+  left: 0;
+  height: 100vh;
+  width: 10%;
+  border-right: 2px solid #ffffff;
+  border-top: 2px solid #ffffff;
+  background: #384174;
+  top: 50;  
+  font-size: 20px;
+  color: white;
+  padding-left: 10px;
+  padding-top: 10px;
+}
+#correct-answer {
+  font-size: 25px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+}
 .e1 {
   background: #21991A;
 }
@@ -33,6 +52,7 @@ body, html {
 .e4 {
   background: #6024D8;
 }
+
 .shopbutton {
   background: #5568a7;
   display: inline-block;
@@ -129,6 +149,7 @@ body, html {
   left: 0;
   width: 100%;
   height: 50px;
+  z-index: 99999999999;
   padding-top: 15px;
   background: #505da7;
 }
@@ -192,6 +213,31 @@ body, html {
 }
 
 #id::placeholder {
+  text-align: center;
+  font-size: 20px;
+  font-family: "Roboto Condensed", sans-serif;
+  letter-spacing: 1px;
+}
+
+.makeform {
+  border-radius: 6px;
+  width: 200px;
+  height: 50px;
+  border: 2px solid #eeeeee;
+  padding-left: 5px;
+  text-align: center;
+  font-size: 20px;
+  font-family: "Roboto Condensed", sans-serif;
+  letter-spacing: 1px;
+}
+
+.makeform:focus {
+  text-align: center;
+  font-family: "Roboto Condensed", sans-serif;
+  letter-spacing: 1px;
+}
+
+.makeform::placeholder {
   text-align: center;
   font-size: 20px;
   font-family: "Roboto Condensed", sans-serif;
@@ -391,7 +437,7 @@ svg {
   margin-right: 5px;
   border: 3px inset #bbbbbb;
   background: #aaaaaa;
-  width: calc(84% - 50px);
+  width: calc(75% - 50px);
   height: 250px;
   margin-top: 5px;
   font-size: 20px;
@@ -404,7 +450,7 @@ svg {
   margin-right: 5px;
   border: 3px inset #bbbbbb;
   background: #aaaaaa;
-  width: calc(84% - 50px);
+  width: calc(75% - 50px);
   height: 250px;
   margin-top: 5px;
   font-size: 20px;
@@ -505,6 +551,7 @@ svg {
 }
 
 .correct h1 {
+  margin-top: 80px;
   font-size: 50px;
 }
 
@@ -520,12 +567,14 @@ svg {
 
 .incorrect h1 {
   font-size: 50px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 #before-start {
   position: absolute;
   top: 0;
-  z-index: 9999;
+  z-index: 9999999999999999999999999999;
 }
 
 #boostshop {
